--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -92,7 +92,9 @@ cta: /connect/contact/?page=gearfit
           </div>
         </div>
         <div class="col-md-6 order-1 order-md-2 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/centralized-feedback.svg" alt="" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/centralized-feedback.svg" alt="" />
+          </div>
         </div>
       </div>
 
@@ -109,13 +111,17 @@ cta: /connect/contact/?page=gearfit
           </div>
         </div>
         <div class="col-md-6 order-1 order-md-1 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/data-analytics.svg" alt="" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/data-analytics.svg" alt="" />
+          </div>
         </div>
       </div>
 
       <div class="row mt-4">
         <div class="col-md-6 order-md-2 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/workflow-mgmt.svg" alt="" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/workflow-mgmt.svg" alt="" />
+          </div>
         </div>
         <div class="col-md-6 order-md-1 mt-4 mt-md-0 vertical-align">
           <div>
@@ -137,13 +143,17 @@ cta: /connect/contact/?page=gearfit
           </div>
         </div>
         <div class="col-md-6 order-1 order-md-1 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/gear-wiki.svg" alt="" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/gear-wiki.svg" alt="" />
+          </div>
         </div>
       </div>
 
       <div class="row mt-4">
         <div class="col-md-6 order-md-2 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/secure-platform.svg" alt="" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/secure-platform.svg" alt="" />
+          </div>
         </div>
         <div class="col-md-6 order-md-1 mt-4 mt-md-0 vertical-align">
           <div>
