--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Our Solutions
+title: Our solutions
 description: Skylight-built solutions for your specific mission needs.
 permalink: /work/solutions/
 preload: hero-solutions.svg
