--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -193,8 +193,8 @@ cta: /connect/contact/?page=gearfit
         </div>
       </div>
       <div class="row text">
-        <div class="callout callout--gear-fit">
-          <h3>Challenges</h3>
+        <div class="callout callout--gearfit">
+          <h3 class="callout-heading">Challenges</h3>
           <ul>
             <li>
               <b>Limited support for female aviators.</b>
@@ -210,8 +210,8 @@ cta: /connect/contact/?page=gearfit
       </div>
 
       <div class="row text">
-        <div class="callout callout--gear-fit">
-          <h3>Solutions</h3>
+        <div class="callout callout--gearfit">
+          <h3 class="callout-heading">Solutions</h3>
           <ul>
             <li>
               <b>Targeting female aircrew.</b>
@@ -230,7 +230,7 @@ cta: /connect/contact/?page=gearfit
       </div>
 
       <div class="row text">
-        <div class="callout callout--gear-fit">
+        <div class="callout callout--gearfit">
           <h3 class="callout-heading">GearFit's impact</h3>
           <p>
             After receiving
