--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -2,8 +2,7 @@
 layout: default
 title: GearFit
 permalink: /work/solutions/gearfit/
-excerpt: Shape the future of gear with feedback.
-image: /img/ditap_executive/ditap-executive-social.png
+excerpt: Learn how GearFit can help you create a feedback loop between gear users and acquirers that enables you to make data-driven decisions about gear problems and priorities like never before.
 image_description: Banner of Skylight's GearFit
 class: ditap page-offering
 preload: hero-gearfit.svg
@@ -186,10 +185,12 @@ cta: /connect/contact/?page=gearfit
           </p>
         </div>
         <div class="col-md-3 order-1 order-md-2">
-          <img
-            class="mobile-width"
-            src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png"
-            alt="Air force life cycle management center seal" />
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+            <img
+              class="mobile-width"
+              src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png"
+              alt="Air force life cycle management center seal" />
+          </div>
         </div>
       </div>
       <div class="row text">
