--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -98,10 +98,10 @@ cta: /connect/contact/?page=gearfit
       </div>
 
       <div class="row mt-4">
-        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 vertical-align">
+        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 vertical-align purple-fix-mobile">
           <div>
             <h3>
-              <span style="margin-right: 1rem;">Data analytics and AI</span>
+              <span class="next-to-purple">Data analytics and AI</span>
               <span class='round-purple'>Coming soon!</span>
             </h3>
             <p>
@@ -181,7 +181,7 @@ cta: /connect/contact/?page=gearfit
             Agile Combat Support (ACS) Directorate, Air Force Life Cycle Management Center (AFLCMC)
           </p>
           <p>
-            The USAF Human Systems Division (HSD) mission is to acquire and support human systems to enhance warfighter performance, protection, and survivability. The GearFit program arose after a female fitment event in 2019, women expressed a desire to provide feedback about their gear.
+            The USAF Human Systems Division (HSD) mission is to acquire and support human systems to enhance warfighter performance, protection, and survivability. The GearFit program arose after a female fitment event in 2019, where women expressed a desire to provide feedback about their gear.
           </p>
         </div>
         <div class="col-md-3 order-1 order-md-2">
