move service design file, remove ditap class, update img description

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -3,8 +3,8 @@ layout: default
 title: GearFit
 permalink: /work/solutions/gearfit/
 excerpt: Learn how GearFit can help you create a feedback loop between gear users and acquirers that enables you to make data-driven decisions about gear problems and priorities like never before.
-image_description: Banner of Skylight's GearFit
-class: ditap page-offering
+image_description: Banner of Skylight's GearFit.
+class: gearfit
 preload: hero-gearfit.svg
 class_1_spots:
 class_2_spots:
