--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -41,7 +41,7 @@ cta: /connect/contact/?page=gearfit
   <div class="mt-6 bg-purple-lightest py-6">
     <div class="grid-container prose">
       <div class="row">
-        <div class="col-md-12 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-12 order-2 order-md-1 mt-4 mt-md-0 maxw-md">
           <h2 id="procurement" class="mb-4">Tackle your toughest gear challenges</h2>
           <p>
             Without the ability to collect, manage, and respond to feedback from the field well, your organization runs the risk of supplying gear that's ill-fitting, ineffective, and misused.
@@ -185,7 +185,7 @@ cta: /connect/contact/?page=gearfit
           </p>
         </div>
         <div class="col-md-3 order-1 order-md-2">
-          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
+          <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: left;">
             <img
               class="mobile-width"
               src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png"
@@ -193,8 +193,8 @@ cta: /connect/contact/?page=gearfit
           </div>
         </div>
       </div>
-      <div class="row text">
-        <div class="callout callout--gearfit">
+      <div class="row text" style="display: flex; justify-content: center;">
+        <div class="callout callout--gearfit maxw-md">
           <h3 class="callout-heading">Challenges</h3>
           <ul>
             <li>
@@ -210,8 +210,8 @@ cta: /connect/contact/?page=gearfit
         </div>
       </div>
 
-      <div class="row text">
-        <div class="callout callout--gearfit">
+      <div class="row text" style="display: flex; justify-content: center;">
+        <div class="callout callout--gearfit maxw-md">
           <h3 class="callout-heading">Solutions</h3>
           <ul>
             <li>
@@ -230,8 +230,8 @@ cta: /connect/contact/?page=gearfit
         </div>
       </div>
 
-      <div class="row text">
-        <div class="callout callout--gearfit">
+      <div class="row text" style="display: flex; justify-content: center;">
+        <div class="callout callout--gearfit maxw-md">
           <h3 class="callout-heading">GearFit's impact</h3>
           <p>
             After receiving
