--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -3,14 +3,14 @@ layout: default
 title: Our solutions
 description: Skylight-built solutions for your specific mission needs.
 permalink: /work/solutions/
-preload: our-solutions.svg
+preload: hero-solutions.svg
 image_description: Skylight training banner showing various educational-related objects such as a book.
 ---
 
 {% include hero_banner.html
 hero_content = 'Skylight-built solutions for your specific mission needs.'
 color = "primary"
-image = "our-solutions.svg" %}
+image = "hero-solutions.svg" %}
 
 <section class="mx-auto maxw-md">
   <div class="grid-container prose">
