change org of gearfit img files

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -32,7 +32,7 @@ cta: /connect/contact/?page=gearfit
           <a class="btn btn-purple font-weight-bold" href="{{ page.cta }}">Request a demo</a>
         </div>
         <div class="col-md-6 order-1 order-md-2 image-div">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/landing-page.svg" alt="" />
+          <img src="{{ site.baseurl }}/img/gearfit/landing-page.svg" alt="" />
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@ cta: /connect/contact/?page=gearfit
         </div>
         <div class="col-md-6 order-1 order-md-2 image-div">
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/centralized-feedback.svg" alt="" />
+            <img src="{{ site.baseurl }}/img/gearfit/centralized-feedback.svg" alt="" />
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@ cta: /connect/contact/?page=gearfit
         </div>
         <div class="col-md-6 order-1 order-md-1 image-div">
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/data-analytics.svg" alt="" />
+            <img src="{{ site.baseurl }}/img/gearfit/data-analytics.svg" alt="" />
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@ cta: /connect/contact/?page=gearfit
       <div class="row mt-4">
         <div class="col-md-6 order-md-2 image-div">
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/workflow-mgmt.svg" alt="" />
+            <img src="{{ site.baseurl }}/img/gearfit/workflow-mgmt.svg" alt="" />
           </div>
         </div>
         <div class="col-md-6 order-md-1 mt-4 mt-md-0 vertical-align">
@@ -143,7 +143,7 @@ cta: /connect/contact/?page=gearfit
         </div>
         <div class="col-md-6 order-1 order-md-1 image-div">
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/gear-wiki.svg" alt="" />
+            <img src="{{ site.baseurl }}/img/gearfit/gear-wiki.svg" alt="" />
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@ cta: /connect/contact/?page=gearfit
       <div class="row mt-4">
         <div class="col-md-6 order-md-2 image-div">
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: center;">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/svg/flexible-platform.svg" alt="" />
+            <img src="{{ site.baseurl }}/img/gearfit/flexible-platform.svg" alt="" />
           </div>
         </div>
         <div class="col-md-6 order-md-1 mt-4 mt-md-0 vertical-align">
@@ -188,7 +188,7 @@ cta: /connect/contact/?page=gearfit
           <div class="m0 p0" style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: left;">
             <img
               class="mobile-width"
-              src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png"
+              src="{{ site.baseurl }}/img/gearfit/aflmc-logo.png"
               alt="Air force life cycle management center seal" />
           </div>
         </div>
