--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,9 @@ layout: default
 title: Team
 description: Learn about Skylight’s story to make government work in a digital world, and meet our team of diverse and talented public-interest technologists.
 permalink: /company/about/
-redirect_from: /about/
+redirect_from:
+  - /work/team-member/john-teeter/
+  - /about/
 preload: hero-about-us.svg
 ---
 
