--- a/pages/join.html
+++ b/pages/join.html
@@ -366,8 +366,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           <li>
             <p class="callout_subtitle">Researcher or designer</p>
             A majority of the time presenting one or two examples from your portfolio to experts in your discipline, 
-            who'll also ask you some questions — either during or after the presentation (whatever you prefer) — 
-            in order to get a deeper sense for your skills and experience
+            who'll also ask you some questions about that work to get a better sense for your skills and experience
           </li>
           <li>
             <p class="callout_subtitle">Software engineer or DevOps engineer</p>
