--- a/pages/join.html
+++ b/pages/join.html
@@ -306,7 +306,7 @@ works." color = "green" image = "hero-join-us.svg" %}
             </li>
             <li>
               Dress in a way that makes you comfortable. No need for blazers or
-              button ups if you prefer a hoodie.
+              button-ups if you prefer a hoodie.
             </li>
             <li>
               We're an equal opportunity employer. If you need reasonable
@@ -346,8 +346,8 @@ works." color = "green" image = "hero-join-us.svg" %}
 
           <h4>2. Skills interview</h4>
           <p>
-            The skills interview runs between 60 and 90 minutes. You’ll meet
-            with two interviewers with experience in your discipline. They’ll
+            The skills interview runs between 60 and 90 minutes. (Sometimes longer depending on the role.) 
+            You’ll typically meet with two interviewers with experience in your discipline. They’ll
             ask a variety of questions about your experience and skills, and how
             you’d apply them within the context of Skylight’s work. We’ll leave
             you with 10–15 minutes at the end for your questions.
@@ -402,8 +402,9 @@ works." color = "green" image = "hero-join-us.svg" %}
       <div class="interview-explanation">
           <h4>3. Behavioral interview</h4>
           <p>
-            The behavioral interview lasts for one hour. The intent is to assess whether or not you’d be a good fit for Skylight’s values and standards of behavior. 
-            You’ll meet with two interviewers who will ask questions about how you communicate, collaborate, and how you approach challenging situations at work. 
+            The behavioral interview lasts for one hour. (Sometimes longer depending on the role.) 
+            The intent is to assess whether or not you’d be a good fit for Skylight’s values and standards of behavior. 
+            You’ll typically meet with two interviewers who'll ask questions about how you approach different work situations. 
             We’ll leave you with 10–15 minutes at the end for your questions. 
           </p>
           <p>
@@ -443,14 +444,14 @@ works." color = "green" image = "hero-join-us.svg" %}
             Plan to talk about your interests, experiences, and what you hope to get out of an internship or apprenticeship at Skylight. 
           </p>
            <p>
-            The next step is a 60-minute skills interview, where you’ll meet with one interviewer with experience in your discipline. 
-             They’ll ask a variety of questions about your experience and skills, 
+             The next step is a 60-minute skills interview, where you’ll typically meet with one interviewer with experience in your discipline. 
+             They’ll ask a variety of questions about your skills and experience, 
              and how you’d apply them within the context of an internship or apprenticeship at Skylight. 
              We’ll leave you with 10–15 minutes at the end for your questions. 
           </p>
           <p>
             Finally, if you’re selected for an internship or apprenticeship, you’ll receive an offer! 
-            We’ll decide on a start date based on when we're able to onboard a class of interns or apprentices together. 
+            We’ll decide on a start date, ideally when we're able to onboard a class of interns or apprentices together. 
           </p>
        </section>
   </div>
