--- a/pages/join.html
+++ b/pages/join.html
@@ -348,7 +348,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           <p>
             The skills interview runs between 60 and 90 minutes. (Sometimes longer depending on the role.) 
             You’ll typically meet with two interviewers with experience in your discipline. They’ll
-            ask a variety of questions about your experience and skills, and how
+            ask a variety of questions about your skills and experience, and how
             you’d apply them within the context of Skylight’s work. We’ll leave
             you with 10–15 minutes at the end for your questions.
           </p>
