solutions page rework

--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -12,11 +12,11 @@ hero_content = 'Skylight-built solutions for your specific mission needs.'
 color = "primary"
 image = "hero-solutions.svg" %}
 
-<section class="mx-auto maxw-md">
+<section class="mx-auto maxw-2xl">
   <div class="grid-container prose">
     <div class="blog-posts-row mt-5">
       {% for solution in site.data.solutions %}
-      <article class="blog-post-col col-md-6">
+      <article class="blog-post-col col-md-4">
         <div class="blog-post-card card-link" data-href="{{ solution.url }}" tabindex="-1">
           <div class="blog-post-block">
             <h2 class="blog-post-title">
