update contact us

--- a/pages/services/public_health.html
+++ b/pages/services/public_health.html
@@ -20,7 +20,7 @@ pagination:
 {% include hero_banner.html
 hero_content = "Learn how Skylight can empower your agency with cutting-edge tools so you make the most of your data."
 link_content = "Contact us"
-link_href = "#"
+link_href = "/connect/contact/?page=public-health"
 link_class = "btn btn-lg btn-10 usa-button usa-button--outline usa-button--inverse"
 link_type = "button"
 color = "blue-100"
