--- a/pages/services/public_health.html
+++ b/pages/services/public_health.html
@@ -31,7 +31,7 @@ additional_class = "hero-banner-btm" %}
   <div class="">
     <div class="grid-container prose">
       <div class="row pt-3">
-        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pr-0">
           <h2 id='service-delivery'>Who is Skylight?</h2>
           <p>
             We're an interdisciplinary team of researchers, designers, engineers, and data scientists with deep
@@ -93,7 +93,7 @@ additional_class = "hero-banner-btm" %}
       </div>
 
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pt-6 pxr-1">
+        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pxr-1">
           <h3>Needs assessment</h2>
             <p>
               We'll perform an analysis of your current data systems, from hosting to end-user experience. Through this
@@ -103,8 +103,8 @@ additional_class = "hero-banner-btm" %}
               digital and data practices.
             </p>
         </div>
-        <div class="col-md-6 order-2 order-md-2 image-div img-bottom pt-6 pxl-1">
-          <img src="{{ site.baseurl }}/img/public-health/whiteboard-public-health.svg" alt="" class="img-95" />
+        <div class="col-md-6 order-2 order-md-2 image-div pxl-1">
+          <img src="{{ site.baseurl }}/img/public-health/whiteboard-public-health.svg" alt="" class="img-90" />
         </div>
       </div>
 
@@ -164,14 +164,14 @@ additional_class = "hero-banner-btm" %}
             behind some
             high priority improvements and innovations that directly benefit public health authorities at all levels of
             government,
-            including SimpleReport and Data Integration Building Blocks.
+            including <a href="/work/experience/cdc-simplereport/"">SimpleReport</a> and <a href="/work/experience/cdc-public-health-data-infrastructure/">Data Integration Building Blocks</a>.
           </p>
-          <p>
+          <p class="mt-5">
             We've helped multiple public health partners improve the way that they collect, process, and share data so
             they can
             more easily:
           </p>
-          <p>
+          <p class="mt-4">
           <ul>
             <li>Identify diseases and conditions</li>
             <li>Detect emerging public health threats</li>
