--- a/pages/services/public_health.html
+++ b/pages/services/public_health.html
@@ -31,7 +31,10 @@ additional_class = "hero-banner-btm" %}
   <div class="">
     <div class="grid-container prose">
       <div class="row pt-3">
-        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pr-0">
+        <div class="col-md-6 order-1 order-md-2 image-div">
+          <img src="{{ site.baseurl }}/img/public-health/landing-page.svg" alt="" />
+        </div>
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0 pr-0">
           <h2 id='service-delivery'>Who is Skylight?</h2>
           <p>
             We're an interdisciplinary team of researchers, designers, engineers, and data scientists with deep
@@ -43,9 +46,6 @@ additional_class = "hero-banner-btm" %}
             modern, and
             performant data systems.
           </p>
-        </div>
-        <div class="col-md-6 order-2 order-md-2 image-div img-bottom">
-          <img src="{{ site.baseurl }}/img/public-health/landing-page.svg" alt="" />
         </div>
       </div>
     </div>
@@ -67,8 +67,10 @@ additional_class = "hero-banner-btm" %}
       </div>
       <div class="row">
         <div class="col-md-12 order-2 order-md-1 mt-4 mt-md-0 white-callout-border">
-          <h3 id="procurement" class="mb-4">We can help you:</h2>
-            <p>
+          <h3 id="procurement" class="mb-4">
+            We can help you:
+          </h3>
+          <p>
             <ul>
               <li>Build modern digital infrastructure usable for both daily and emergent public health action, across
                 multiple disease
@@ -78,10 +80,9 @@ additional_class = "hero-banner-btm" %}
               <li>Break down siloes and connect data across person, place, and time</li>
               <li>Grow your team's technical capacity through tailored workforce support and training</li>
             </ul>
-            </p>
+          </p>
         </div>
       </div>
-
       <div class="row mt-6">
         <div class="col-md-12 order-2 order-md-1 mt-4 mt-md-0">
           <i>
@@ -91,64 +92,76 @@ additional_class = "hero-banner-btm" %}
           </i>
         </div>
       </div>
-
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pxr-1">
-          <h3>Needs assessment</h2>
-            <p>
-              We'll perform an analysis of your current data systems, from hosting to end-user experience. Through this
-              analysis, you
-              can learn how your users interact with every system and discover opportunities to accelerate the adoption
-              of modern
-              digital and data practices.
-            </p>
-        </div>
-        <div class="col-md-6 order-2 order-md-2 image-div pxl-1">
+        <div class="col-md-6 order-1 order-md-2 image-div pxl-1">
           <img src="{{ site.baseurl }}/img/public-health/whiteboard-public-health.svg" alt="" class="img-90" />
         </div>
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0 pxr-1">
+          <div class='vertical-align'>
+            <div style="display: block;">
+              <h3>Needs assessment</h3>
+              <p>
+                We'll perform an analysis of your current data systems, from hosting to end-user experience. Through this
+                analysis, you
+                can learn how your users interact with every system and discover opportunities to accelerate the adoption
+                of modern
+                digital and data practices.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 image-div img-bottom pt-6 pxr-1">
+        <div class="col-md-6 order-1 order-md-1 image-div pxr-1">
           <img src="{{ site.baseurl }}/img/public-health/belt-public-health.svg" alt="" class="img-95" />
         </div>
-        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 pt-6 pxl-1">
-          <h3>Data modernization strategy</h2>
-            <p>
-              We'll design a strategy to meet your data modernization goals and maximize your dollars and time. You can
-              use this
-              strategy to find out how to improve your organization's systems, processes, and technical capabilities.
-            </p>
+        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 pxl-1">
+          <div class='vertical-align'>
+            <div style="display: block;">
+              <h3>Data modernization strategy</h3>
+                <p>
+                  We'll design a strategy to meet your data modernization goals and maximize your dollars and time. You can
+                  use this
+                  strategy to find out how to improve your organization's systems, processes, and technical capabilities.
+                </p>
+              </div>
+            </div>
         </div>
       </div>
-
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 mt-4 mt-md-0 pt-6 pxr-1">
-          <h3>Implementation</h2>
-            <p>
-              We'll use an agile, user-centered product development approach to develop custom software solutions. Our
-              flexible,
-              sustainable software tools will help solve your jurisdiction's data challenges and modernize your data
-              workflows.
-            </p>
-        </div>
-        <div class="col-md-6 order-2 order-md-2 image-div img-bottom pt-6 pxl-1">
+        <div class="col-md-6 order-1 order-md-2 image-div pxl-1">
           <img src="{{ site.baseurl }}/img/public-health/agile-public-health.svg" alt="" class="img-95" />
         </div>
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0 pxr-1">
+          <div class='vertical-align'>
+            <div style="display: block;">
+              <h3>Implementation</h3>
+                <p>
+                  We'll use an agile, user-centered product development approach to develop custom software solutions. Our
+                  flexible,
+                  sustainable software tools will help solve your jurisdiction's data challenges and modernize your data
+                  workflows.
+                </p>
+              </div>
+            </div>
+        </div>
       </div>
-
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 image-div img-bottom pt-6 pxr-1">
+        <div class="col-md-6 order-1 order-md-1 image-div pxr-1">
           <img src="{{ site.baseurl }}/img/public-health/stairs-public-health.svg" alt="" class="img-95" />
         </div>
-        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 pt-6 pxl-1">
-          <h3>Workforce enablement</h2>
-            <p>
-              We'll partner directly with your team to build their technical capacity through pairing, shadowing, and
-              regular product
-              demonstrations. Through this tailored support and training, our experts can develop your team’s internal
-              competencies.
-            </p>
+        <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 pxl-1">
+          <div class='vertical-align'>
+            <div style="display: block;">
+              <h3>Workforce enablement</h3>
+                <p>
+                  We'll partner directly with your team to build their technical capacity through pairing, shadowing, and
+                  regular product
+                  demonstrations. Through this tailored support and training, our experts can develop your team’s internal
+                  competencies.
+                </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -188,37 +201,38 @@ additional_class = "hero-banner-btm" %}
   <div class="mt-6 bg-blue-20 py-6">
     <div class="grid-container prose">
       <div class="row">
-        <div class="col-md-5 order-1 order-md-1">
-          <div class="m0 p0"
-            style="height: 100%; width: 100%; display: flex; align-items: center; justify-content: left;">
-            <img class="mobile-width" src="{{ site.baseurl }}/img/public-health/people-high-fiving-1.svg" alt="" />
-          </div>
+        <div class="col-md-5 order-1 order-md-1 image-div pxr-1">
+          <img src="{{ site.baseurl }}/img/public-health/people-high-fiving-1.svg" alt="" class="img-95" />
         </div>
         <div class="col-md-7 order-2 order-md-2 mt-4 mt-md-0">
-          <h2 id="customer_spotlight">How to engage with us</h2>
-          <p>
-          <ul>
-            <li>State and local contracting vehicles</li>
-            <li>Microconsulting packages</li>
-            <li>GSA Multiple Award Schedule (MAS)</li>
-            <li>
-              Accessible to all federal, state, and local governments
+          <div class='vertical-align'>
+            <div style="display: block;">
+              <h2 id="customer_spotlight">How to engage with us</h2>
+              <p>
               <ul>
+                <li>State and local contracting vehicles</li>
+                <li>Microconsulting packages</li>
+                <li>GSA Multiple Award Schedule (MAS)</li>
                 <li>
-                  Partner with Skylight through Cooperative Purchasing Agreement or Disaster Relief Funding; Information
-                  Technology - IT
-                  Services SIN 54151S (<a
-                    href="https://www.gsa.gov/resources/programs-for-state-and-local-governments">learn more</a>)
-                </li>
-                <li>
-                  <a href="https://www.youtube.com/playlist?list=PLvdwyPgXnxxU3O3f6kFoSVaTJ-c_mdQxj">
-                    GSA resources to onboard and use MAS
-                  </a>
+                  Accessible to all federal, state, and local governments
+                  <ul>
+                    <li>
+                      Partner with Skylight through Cooperative Purchasing Agreement or Disaster Relief Funding; Information
+                      Technology - IT
+                      Services SIN 54151S (<a
+                        href="https://www.gsa.gov/resources/programs-for-state-and-local-governments">learn more</a>)
+                    </li>
+                    <li>
+                      <a href="https://www.youtube.com/playlist?list=PLvdwyPgXnxxU3O3f6kFoSVaTJ-c_mdQxj">
+                        GSA resources to onboard and use MAS
+                      </a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
-            </li>
-          </ul>
-          </p>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
