--- a/pages/services/public_health.html
+++ b/pages/services/public_health.html
@@ -147,7 +147,7 @@ additional_class = "hero-banner-btm" %}
         </div>
       </div>
       <div class="row pt-3 mt-6">
-        <div class="col-md-6 order-1 order-md-1 image-div pxr-1">
+        <div class="col-md-6 order-1 order-md-1 image-div pxr-0">
           <img src="{{ site.baseurl }}/img/public-health/stairs-public-health.svg" alt="" class="img-95" />
         </div>
         <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0 pxl-1">
@@ -179,8 +179,8 @@ additional_class = "hero-banner-btm" %}
             government,
             including <a href="/work/experience/cdc-simplereport/"">SimpleReport</a> and <a href="/work/experience/cdc-public-health-data-infrastructure/">Data Integration Building Blocks</a>.
           </p>
-          <p class="mt-5">
-            We've helped multiple public health partners improve the way that they collect, process, and share data so
+          <p class="mt-4">
+            We've helped multiple public health partners improve the way that they<br/>collect, process, and share data so
             they can
             more easily:
           </p>
@@ -201,7 +201,7 @@ additional_class = "hero-banner-btm" %}
   <div class="mt-6 bg-blue-20 py-6">
     <div class="grid-container prose">
       <div class="row">
-        <div class="col-md-5 order-1 order-md-1 image-div pxr-1">
+        <div class="col-md-5 order-1 order-md-1 image-div image-div-small pxr-1">
           <img src="{{ site.baseurl }}/img/public-health/people-high-fiving-1.svg" alt="" class="img-95" />
         </div>
         <div class="col-md-7 order-2 order-md-2 mt-4 mt-md-0">
